Enhance application structure and testing processes
This commit introduces significant updates to the application's codebase, including the addition of new features and improvements to existing functionalities. Key changes include the restructuring of the solution file to accommodate new test projects, modifications to various Razor components for improved user experience, and the implementation of a CI/CD pipeline for automated testing and deployment.

Additionally, the testing scripts (`run-tests-ci.ps1` and `run-tests.ps1`) have been enhanced to streamline the testing process, ensuring that both backend and frontend tests are executed efficiently with detailed logging and error handling. Coverage reports are generated where applicable, providing insights into test results.

Overall, these modifications aim to optimize performance, maintainability, and user experience while aligning with current best practices in software development.

--- a/My-Ai/appsettings.json
+++ b/My-Ai/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Gemini": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+    "Gemini": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent",
+    "ChatGPT": "https://api.openai.com/v1/responses"
   }
 }
