--- a/My-Ai/Ai-My.csproj
+++ b/My-Ai/Ai-My.csproj
@@ -14,6 +14,12 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="itext7" Version="9.2.0" />
     <PackageReference Include="Mscc.GenerativeAI" Version="2.8.3" />
+    <PackageReference Include="OpenAI" Version="2.3.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\about\" />
   </ItemGroup>
 
 </Project>
