--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,13 @@ on:
   push:
     branches: [ master ]
 
+# Add permissions for the GITHUB_TOKEN
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  checks: write
+
 env:
   DOTNET_VERSION: '9.0.x'
   AZURE_WEBAPP_NAME: 'Ai-My'    # Replace with your Azure App Service name
@@ -17,6 +24,12 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
+      checks: write
     
     steps:
     - name: Checkout code
@@ -66,6 +79,7 @@ jobs:
       with:
         header: test-coverage
         path: TestResults/Coverage/SummaryGithub.md
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish application
       if: github.ref == 'refs/heads/master'
@@ -86,12 +100,21 @@ jobs:
     if: github.ref == 'refs/heads/master'
     environment: production
     
+    permissions:
+      contents: read
+    
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
         name: webapp-artifacts
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+    # Add Azure login step before any Azure CLI commands
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
@@ -106,5 +129,3 @@ jobs:
         azcliversion: latest
         inlineScript: |
           az webapp restart --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }}
-      env:
-        AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
