--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches: [ master ]
 
-# Add permissions for the GITHUB_TOKEN
 permissions:
   contents: read
   pull-requests: write
@@ -15,22 +14,20 @@ permissions:
 
 env:
   DOTNET_VERSION: '9.0.x'
-  AZURE_WEBAPP_NAME: 'Ai-My'    # Replace with your Azure App Service name
+  AZURE_WEBAPP_NAME: 'Ai-My'
   AZURE_WEBAPP_PACKAGE_PATH: './publish'
   PROJECT_PATH: './My-Ai/Ai-My.csproj'
+  STAGING_SLOT_NAME: 'staging'
 
 jobs:
-  # Job 1: Build and Test (runs on both PR and push to master)
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
-    
     permissions:
       contents: read
       pull-requests: write
       issues: write
       checks: write
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -92,17 +89,14 @@ jobs:
         name: webapp-artifacts
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-  # Job 2: Deploy to Azure (only runs on push to master)
-  deploy:
-    name: Deploy to Azure
+  deploy-to-staging:
+    name: Deploy to Staging Slot
     runs-on: ubuntu-latest
     needs: build-and-test
     if: github.ref == 'refs/heads/master'
-    environment: production
-    
+    environment: staging            # Use production here if you want approvals before deploying to staging
     permissions:
       contents: read
-    
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v4
@@ -110,22 +104,84 @@ jobs:
         name: webapp-artifacts
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-    # Add Azure login step before any Azure CLI commands
     - name: Login to Azure
       uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Deploy to Azure Web App
+    - name: Deploy to staging slot
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        slot-name: ${{ env.STAGING_SLOT_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_STAGING }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-    - name: Restart Azure Web App
+    - name: Restart staging slot
       uses: azure/CLI@v2
       with:
         azcliversion: latest
         inlineScript: |
-          az webapp restart --name ${{ env.AZURE_WEBAPP_NAME }} --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }}
+          az webapp restart \
+            --name "${{ env.AZURE_WEBAPP_NAME }}" \
+            --resource-group "${{ secrets.AZURE_RESOURCE_GROUP }}" \
+            --slot "${{ env.STAGING_SLOT_NAME }}"
+
+    - name: Smoke test staging (expect 200)
+      shell: bash
+      run: |
+        set -euo pipefail
+        STAGING_URL="https://${{ env.AZURE_WEBAPP_NAME }}-${{ env.STAGING_SLOT_NAME }}.azurewebsites.net/"
+        echo "Smoking: $STAGING_URL"
+        for i in {1..15}; do
+          CODE=$(curl -sS -o /dev/null -w "%{http_code}" "$STAGING_URL" || echo 000)
+          echo "Attempt $i => HTTP $CODE"
+          if [ "$CODE" = "200" ]; then
+            echo "Staging healthy."
+            exit 0
+          fi
+          sleep 10
+        done
+        echo "Smoke test failed for $STAGING_URL"
+        exit 1
+
+  swap-to-production:
+    name: Swap Staging to Production
+    runs-on: ubuntu-latest
+    needs: deploy-to-staging
+    if: github.ref == 'refs/heads/master'
+    environment: production         # Approval gate before swap
+    steps:
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Swap slots (staging -> production)
+      uses: azure/CLI@v2
+      with:
+        azcliversion: latest
+        inlineScript: |
+          az webapp deployment slot swap \
+            --resource-group "${{ secrets.AZURE_RESOURCE_GROUP }}" \
+            --name "${{ env.AZURE_WEBAPP_NAME }}" \
+            --slot "${{ env.STAGING_SLOT_NAME }}" \
+            --target-slot production
+
+    - name: Verify production (expect 200)
+      shell: bash
+      run: |
+        set -euo pipefail
+        PROD_URL="https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/"
+        echo "Verifying: $PROD_URL"
+        for i in {1..15}; do
+          CODE=$(curl -sS -o /dev/null -w "%{http_code}" "$PROD_URL" || echo 000)
+          echo "Attempt $i => HTTP $CODE"
+          if [ "$CODE" = "200" ]; then
+            echo "Production healthy."
+            exit 0
+          fi
+          sleep 10
+        done
+        echo "Production verification failed for $PROD_URL"
+        exit 1
